src/test/resources/semantic/sentences/correct/TC_WHILE.ru
struct A{
    Int a;
}

impl A{
    .(){
        (nil);
        ("false");
        a=1;

    }
    fn m1(Int c)->void{
        while (true){
            a=1;
        }
    }
}
start{
}
