src/test/resources/semantic/sentences/error/TC_ERROR_ASIGNATION1.ru
struct A{
    Int a;
}

impl A{
    .(){
        a="";
    }
}

start{
}
